src/objects/BMCServiceDesk__SYSknowSearchField__c.object
<CustomObject>
    <description>This object allows you to store data used to execute Global Search.</description>
    <fields>
        <fullName>BMCServiceDesk__DisplayOrder__c</fullName>
        <description>The column position when search is displayed</description>
        <label>DisplayOrder</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldName__c</fullName>
        <label>FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsSearchField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSearchField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution</label>
        <type>Checkbox</type>
    </fields>
    <label>Global Search</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__ObjectName__c</columns>
        <columns>BMCServiceDesk__FieldName__c</columns>
        <columns>BMCServiceDesk__IsSearchField__c</columns>
        <columns>BMCServiceDesk__DisplayOrder__c</columns>
        <columns>BMCServiceDesk__Solution__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KS-{00000}</displayFormat>
        <label>SYSKSFieldsId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSGlobalSearch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>